--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,459 @@
-.App {
+/* 
+GENERAL SETTINGS
+*/
+
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+}
+
+a {
+  text-decoration: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+img {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+section {
+  position: relative;
+}
+
+/* Nav Settings */
+
+nav {
+  width: 70%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 40px 0;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+ul {
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+ul li {
+  margin: 0 15px;
+}
+
+ul a {
+  color: black;
+}
+
+ul li:nth-child(1) {
+  margin-left: 0;
+}
+
+.right_nav img {
+  width: 30px;
+  height: auto;
+}
+
+/* Home settings */
+
+#home {
+  padding: 200px 0;
+  position: relative;
+}
+
+.container {
+  width: 70%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.title_home {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.title_home h2 {
+  text-transform: uppercase;
+  font-size: 4rem;
+  font-weight: 600;
+}
+
+/* Showcase Settings */
+
+#showcase {
+  padding: 100px 0;
+  background-color: #1e1f25;
+}
+
+.container_1 {
+  width: 80%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.row_1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.card {
+  background-color: #2c2c2c;
+  margin: 10px 10px;
+  width: 390px;
+  position: relative;
+  height: 100%;
+}
+
+.card:nth-last-child() {
+  margin-right: 0;
+}
+
+.wrapper_card {
+  width: 100%;
+}
+
+.col_1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 100%;
+  position: relative;
+}
+
+.banner {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.banner img {
+  width: 100%;
+}
+
+.col_2 {
+  padding: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.col_3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: inherit;
+}
+
+.col_3 h2 {
+  margin-bottom: 10px;
+}
+
+.col_3 h2,
+h4 {
+  color: white;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.description {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+}
+
+.description p:nth-child(1) {
+  margin-bottom: 10px;
+  font-size: 1.2rem;
+  color: #bb7f3c;
+}
+
+.text_hidden {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden !important;
+}
+
+.text {
+  margin-bottom: 10px;
+  color: #b3b3b3;
+  overflow: visible;
+}
+
+.row_3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+
+.row_3 p:nth-child(1) {
+  color: #bb7f3c;
+  margin-right: 20px;
+  white-space: nowrap;
+}
+
+.row_3 p:nth-child(2) {
+  color: #b3b3b3;
+  text-align: right;
+}
+
+.row_3_hidden {
+  display: none;
+}
+
+.producer_hidden {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  overflow: hidden !important;
+}
+
+.producer {
+  color: #b3b3b3;
+  overflow: visible;
+}
+
+.col_4 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+/* Arrow settings */
+
+.arrow_down {
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width: 25px;
+  height: 25px;
+  border-radius: 99%;
+  background-color: #2c2c2c;
+  cursor: pointer;
+}
+
+.arrow_down span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  left: 44%;
+  top: 9px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 10px;
+  width: 10px;
+  border-style: solid;
+  border-color: white;
+  border-width: 0px 1px 1px 0px;
+  -webkit-transform: rotate(45deg) translate(-50%);
+  -ms-transform: rotate(45deg) translate(-50%);
+  transform: rotate(45deg) translate(-50%);
+}
+
+.arrow_up {
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width: 25px;
+  height: 25px;
+  border-radius: 99%;
+  background-color: #2c2c2c;
+  cursor: pointer;
+}
+
+.arrow_up span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  left: 19%;
+  top: 9px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 10px;
+  width: 10px;
+  border-style: solid;
+  border-color: white;
+  border-width: 0px 1px 1px 0px;
+  -webkit-transform: rotate(225deg) translate(-50%);
+  -ms-transform: rotate(225deg) translate(-50%);
+  transform: rotate(225deg) translate(-50%);
+}
+
+/* Scroll Top Settings */
+
+#scroll_top {
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  right: 16px;
+  bottom: 16px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: var(--background);
+  opacity: 0;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.arrow_top {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 3px;
+  height: 30px;
+  background-color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.arrow_top::after,
+.arrow_top::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  width: 3px;
+  height: 15px;
+  background-color: white;
+}
+
+.arrow_top::after {
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  right: 5px;
+}
+
+.arrow_top::before {
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  left: 5px;
+}
+
+/* Responsive */
+
+@media screen and (max-width: 410px) {
+  nav {
+    width: 95%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .container_1 {
+    width: 95%;
+  }
+
+  .card {
+    width: 100%;
   }
 }
